<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/checked"
                android:id="@+id/checkedIcon"
                android:layout_marginEnd="8dp"
                android:layout_centerVertical="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirmation"
                android:layout_toEndOf="@+id/checkedIcon"
                android:fontFamily="@font/roboto_regular"
                android:textFontWeight="500"
                android:textSize="20sp"
                android:id="@+id/title"
                android:textColor="@color/black" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You have confirmed buying this share."
            android:fontFamily="@font/roboto_regular"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:id="@+id/subTitle"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextNumberOfShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/number_of_shares"
            android:paddingStart="16dp"
            android:fontFamily="@font/roboto_regular"
            android:textFontWeight="400"
            android:inputType="number"
            android:textColorHint="#5100A5"
            android:background="@drawable/admin_input_bg"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/cancel"
                android:fontFamily="@font/roboto_regular"
                android:textFontWeight="500"
                android:layout_marginEnd="32dp"
                android:textSize="16sp"
                android:layout_toStartOf="@+id/confrimbutton"
                android:id="@+id/cancelButton"
                android:textColor="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/confirm"
                android:fontFamily="@font/roboto_regular"
                android:textFontWeight="500"
                android:textSize="16sp"
                android:layout_alignParentEnd="true"
                android:id="@+id/confrimbutton"
                android:textColor="#5100A5" />
        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>